Begining od Paralax Effect
- Created begining of paralax effect

--- a/interface/templates/interface/analysis.html
+++ b/interface/templates/interface/analysis.html
@@ -1,8 +1,22 @@
 {%extends "interface/base.html"%} {%block title%} Analysis {%endblock%} 
 {%block content%}
 
-<div class="main-site">
-  <div class="main-text">ANALYSIS</div>
-  <div class="main-text">HERE</div>
+<div class="parallax-container">
+  <div class="parallax">
+    {% load static %}
+    <img src="{% static 'img/parallax1.jpg' %}">
+  </div>
 </div>
+<div class="section white">
+  <div class="row container">
+    <h2 class="header">Parallax</h2>
+    <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+  </div>
+</div>
+<div class="parallax-container">
+  <div class="parallax">
+    {% load static %}
+    <img src="{% static 'img/parallax2.jpg' %}">
+  </div>
+  
 {%endblock%}
