--- a/interface/templates/interface/analysis.html
+++ b/interface/templates/interface/analysis.html
@@ -1,22 +1,33 @@
-{%extends "interface/base.html"%} {%block title%} Analysis {%endblock%} 
+{%extends "interface/base.html"%}
+{% load static %}
+{%block title%} Analysis {%endblock%} 
 {%block content%}
+
 
 <div class="parallax-container">
   <div class="parallax">
-    {% load static %}
-    <img src="{% static 'img/parallax1.jpg' %}">
+    <img class='parallax-img' src="{% static 'interface/img/manwithball.jpg' %}">
   </div>
 </div>
 <div class="section white">
   <div class="row container">
     <h2 class="header">Parallax</h2>
-    <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+    <p class="grey-text text-darken-3 lighten-3">
+      Elo byczq. Co tu robisz??????
+    <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
+    </p>
   </div>
 </div>
 <div class="parallax-container">
   <div class="parallax">
-    {% load static %}
-    <img src="{% static 'img/parallax2.jpg' %}">
+    <img src="{% static 'interface/img/manwithball.jpg' %}">
   </div>
+
+  <script>
+    $(document).ready(function(){
+    $('.parallax').parallax();
+    });
+
+  </script>
   
 {%endblock%}
