--- a/interface/templates/interface/base.html
+++ b/interface/templates/interface/base.html
@@ -19,33 +19,48 @@
 
     <link
       rel="stylesheet"
+      type="text/css"
+      href="{% static 'interface/css/uploadform.css' %}"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous">
+    </script>
   </head>
   <body>
     <nav class="nav-extended ">
       <a href="{% url 'index' %}">
-        <div class="nav-wrapper {% if request.resolver_match.url_name == 'index'%}active{% endif %}">
+        <div class="nav-wrapper">
           <div class="brand-logo center">Basketball projection analysis AI</div>
         </div>
       </a>
       <div class="nav-content">
         <ul class="tabs tabs-transparent ul-even">
-          <li class="tab waves-effect {% if request.resolver_match.url_name == 'instruction'%}active{% endif %}"><a href="{% url 'instruction' %}">INSTRUCTION</a></li>
-          <li class="tab waves-effect {% if request.resolver_match.url_name == 'upload'%}active{% endif %}"><a href="{% url 'upload' %}">UPLOAD</a></li>
+          <li class="tab waves-effect waves-light "><a id="link1" href="#">INSTRUCTION</a></li>
+          <li class="tab waves-effect waves-light "><a id="link2" href="#">UPLOAD</a></li>
           <!-- <li class="tab {% if request.resolver_match.url_name == 'analysis'%}active{% endif %}"><a href="{% url 'analysis' %}">ANALYSIS</a></li> -->
-          <li class="tab waves-effect {% if request.resolver_match.url_name == 'authors'%}active{% endif %}"><a href="{% url 'authors' %}">AUTHORS</a></li>
-        </ul>
+          <li class="tab waves-effect waves-light "><a id="link3" href="#">AUTHORS</a></li>
+        </ul> 
       </div>
     </nav>
-
-    <div class="container">{%block content%} {%endblock%}</div>
+    <a href="#" class="scrollup"><i class="large material-icons">expand_less</i></a>
+    <div >{%block content%} {%endblock%}</div>
     <!--JavaScript at end of body for optimized loading-->
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
     ></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+    <script src="{% static 'interface/js/jqscrollto.js' %}"></script>
+    <script src="{% static 'interface/js/uploadform.js' %}"></script>
   </body>
 </html>
