--- a/static/interface/css/style.css
+++ b/static/interface/css/style.css
@@ -27,6 +27,7 @@ body {
 
 .nav-content {
   background-color: #f5ab1b !important;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .ul-even {
@@ -63,4 +64,46 @@ body {
 
 .main-text {
   line-height: 144px;
+}
+
+.parallax {
+  z-index: 0 !important;
+}
+
+/* .parallax-img {
+  width: 100%;
+} */
+
+.section {
+  color: white;
+}
+
+.btn {
+  background-color: #f5ab1b !important;
+}
+.material-icons {
+  background: none !important;
+}
+
+.scrollup {
+  width: 64px;
+  height: 64px;
+  color: #f5ab1b;
+  text-decoration: none;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  display: none;
+  z-index: 999;
+}
+
+#stopka {
+  background-color: #f5ab1b;
+  color: black;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+  height: 25px;
+  letter-spacing: 0.5px;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
