--- a/static/interface/css/style.css
+++ b/static/interface/css/style.css
@@ -28,6 +28,7 @@ body {
 .nav-content {
   background-color: #f5ab1b !important;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .ul-even {
@@ -47,10 +48,6 @@ body {
 }
 .tab:hover {
   background-color: #393636;
-}
-
-.active {
-  background-color: #393636 !important;
 }
 
 .main-site {
@@ -98,12 +95,18 @@ body {
 }
 
 #stopka {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
   background-color: #f5ab1b;
   color: black;
   text-align: center;
-  text-transform: uppercase;
   width: 100%;
   height: 25px;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.2px;
+  padding-top: 2px;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.circle-clipper {
+  border-color: #f5ab1b !important;
 }
