More layout changes
- Parallax changes
- Section changes
- Added Authors
- Changed "Instruction" to "How to"

--- a/interface/templates/interface/base.html
+++ b/interface/templates/interface/base.html
@@ -36,7 +36,7 @@
     crossorigin="anonymous">
     </script>
   </head>
-  <body>
+  <body >
     <nav class="nav-extended ">
       <a href="{% url 'index' %}">
         <div class="nav-wrapper">
@@ -45,7 +45,7 @@
       </a>
       <div class="nav-content">
         <ul class="tabs tabs-transparent ul-even">
-          <li class="tab waves-effect waves-light "><a id="link1" href="#">INSTRUCTION</a></li>
+          <li class="tab waves-effect waves-light "><a id="link1" href="#">HOW TO</a></li>
           <li class="tab waves-effect waves-light "><a id="link2" href="#">UPLOAD</a></li>
           <!-- <li class="tab {% if request.resolver_match.url_name == 'analysis'%}active{% endif %}"><a href="{% url 'analysis' %}">ANALYSIS</a></li> -->
           <li class="tab waves-effect waves-light "><a id="link3" href="#">AUTHORS</a></li>
