--- a/interface/templates/interface/index.html
+++ b/interface/templates/interface/index.html
@@ -6,32 +6,38 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img class='parallax-img' src="{% static 'interface/img/ball1.jpg' %}">
+    <img class='parallax-img' src="{% static 'interface/img/6.jpg' %}">
   </div>
 </div>
 
 <div id="instruction" class="section">
   <div class="row container">
     <br />
-    <h2>INSTRUCTION</h2>
-    <p class="text-darken-3 lighten-3">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed massa massa, faucibus at tellus id, feugiat semper purus. Vestibulum ac libero neque. Maecenas varius leo vehicula tempor aliquam. Suspendisse viverra, risus sit amet cursus convallis, mi dui mollis augue, mattis fringilla dolor nunc ac nulla. Vivamus pretium mollis risus nec fringilla. In eget risus felis. Pellentesque accumsan elit sit amet nunc dignissim, vitae mattis felis blandit.
-      Suspendisse convallis consequat maximus. Quisque mollis eros nec metus tincidunt, in suscipit tortor convallis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras elementum mauris vel nisi mollis consectetur. Praesent viverra erat eget congue laoreet. Nulla in orci vitae est dictum placerat. Fusce neque purus, imperdiet commodo tellus eu, aliquam venenatis erat. Proin rutrum eget dui nec lobortis. Nam tellus elit, placerat ut mi non, pretium consequat nunc. Aliquam consectetur consectetur vestibulum. Suspendisse quis viverra justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Nulla laoreet nibh nec quam facilisis, a viverra nunc ultrices. Praesent pellentesque, leo vel varius tristique, sapien felis dictum felis, quis faucibus mi ante ut est. Sed quis dolor sit amet nisi feugiat rutrum. Aliquam sed ex sit amet mauris egestas feugiat. Suspendisse efficitur orci vitae euismod blandit. Duis tincidunt odio lorem, vel blandit sapien elementum laoreet. Aenean nec malesuada arcu.
-      Sed ut scelerisque ex, sit amet tincidunt eros. Aliquam vel ipsum magna. Aliquam purus eros, accumsan sed egestas ac, rhoncus eu nibh. Aenean ullamcorper, justo in vulputate mollis, ante risus semper nibh, non lacinia justo erat sit amet eros. Quisque semper convallis ex nec eleifend. Aliquam suscipit egestas malesuada. Aenean molestie quam erat, et mollis sapien fringilla quis. In hac habitasse platea dictumst. Vestibulum sit amet quam lorem. Fusce diam risus, consectetur in accumsan sed, molestie et nisl. Sed mi turpis, tincidunt in velit nec, vulputate euismod massa. Sed eu velit cursus, venenatis est vitae, feugiat tortor. Nullam ac lectus hendrerit, porttitor eros ut, malesuada nisl.
-      Ut tortor nisi, lobortis eu ante vel, venenatis faucibus orci. Phasellus venenatis risus orci, a sodales metus rutrum quis. Cras sodales lobortis urna sit amet laoreet. Nunc vehicula risus vel felis varius, non interdum lectus feugiat. Integer ac commodo lectus. Aenean id vulputate metus. Phasellus convallis, velit ut gravida porta, velit turpis egestas ipsum, eu imperdiet ligula risus nec risus. Pellentesque quis nulla sed tellus facilisis ultricies non rutrum tortor. Praesent id magna faucibus enim posuere tempor. Aenean congue justo quam, at placerat metus aliquet vel. Donec iaculis sem purus, quis tempus magna laoreet a.
-    </p>
+    <h2>HOW TO</h2>
+    <br /> <br /> <br /> <br /> 
+    <div class="preloader-wrapper big active">
+      <div class="spinner-layer">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div><div class="gap-patch">
+          <div class="circle"></div>
+        </div><div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+    <br /> <br /> <br /> <br />
   </div>
 </div>
 
   <div class="parallax-container">
     <div class="parallax">
-      <img src="{% static 'interface/img/ball1.jpg' %}">
+      <img src="{% static 'interface/img/rim1.jpg' %}">
     </div>
   </div>
 
 <div id="upload" class="section">
-  <div class="row container">
+  <div class="row container" id="section-id">
     <br /> 
     <h2>UPLOAD</h2>
     <br />
@@ -42,10 +48,12 @@
       <label for="file-upload" id="file-drag">
         <img id="file-image" src="#" alt="Preview" class="hidden">
         <div id="start">
-          <i class="fa fa-download" aria-hidden="true"></i>
-          <div>Select a file or drag here</div>
-          <div id="notimage" class="hidden">Please select an image</div>
-          <span id="file-upload-btn" class="btn btn-primary">Select a file</span>
+          <div class="upload-text">
+            <i class="fa fa-download" aria-hidden="true"></i>
+            <div>Select a file or drag here</div>
+            <div id="notimage" class="hidden">Please select a video</div>
+            <!-- <span id="file-upload-btn" class="btn btn-primary">Select a file</span> -->
+          </div>
         </div>
         <div id="response" class="hidden">
           <div id="messages"></div>
@@ -63,27 +71,49 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="{% static 'interface/img/ball1.jpg' %}">
+    <img src="{% static 'interface/img/66.jpg' %}">
   </div>
 </div>
 
 <div id="authors" class="section">
-  <div class="row container">
+  <div class="row container" id="section-id">
     <br />
     <h2>AUTHORS</h2>
-    <br /> <br /> <br /> <br /> 
-    <div class="preloader-wrapper big active">
-      <div class="spinner-layer">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
+    <br />
+
+    <div class="authors-container">
+
+      <div class="authors">
+        <div class="authors-text">
+          <i class="material-icons">person</i>
+        </div>
+        <div class="authors-text">
+          Anita Szumiec
         </div>
       </div>
+
+      <div class="authors">
+        <div class="authors-text">
+          <i class="material-icons">person</i>
+        </div>
+        <div class="authors-text">
+          Bartłomiej Madejski
+        </div>
+      </div>
+
+      <div class="authors">
+        <div class="authors-text">
+          <i class="material-icons">person</i>
+        </div>
+        <div class="authors-text">
+          Patryk Parkitny
+        </div>
+      </div>
+
     </div>
-    <br /> <br /> <br /> <br />
+    
+
+    <br /> <br /> 
   </div>
 
 </div>
