--- a/static/interface/css/style.css
+++ b/static/interface/css/style.css
@@ -63,13 +63,17 @@ body {
   line-height: 144px;
 }
 
+/*  PARALLAX  */
 .parallax {
   z-index: 0 !important;
 }
 
-/* .parallax-img {
-  width: 100%;
-} */
+.parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 600px !important;
+}
+/*  PARALLAX  */
 
 .section {
   color: white;
@@ -78,8 +82,10 @@ body {
 .btn {
   background-color: #f5ab1b !important;
 }
+
 .material-icons {
   background: none !important;
+  font-size: 85px !important;
 }
 
 .scrollup {
@@ -109,4 +115,39 @@ body {
 
 .circle-clipper {
   border-color: #f5ab1b !important;
+}
+
+#section-id {
+  padding-top: 30px;
+}
+
+.authors-container {
+  display: flex;
+}
+
+.authors {
+  display: block;
+  flex: auto;
+  text-overflow: ellipsis;
+}
+
+.authors:hover {
+  background-color: white !important;
+  color: black !important;
+  cursor: default;
+  transition: all 0.4s ease;
+}
+
+.authors-text {
+  font-size: 30px !important;
+  flex: auto;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding: 5px;
+}
+
+.row {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  height: 400px !important;
 }
