--- a/static/interface/css/uploadform.css
+++ b/static/interface/css/uploadform.css
@@ -15,7 +15,7 @@ body {
 
 h2 {
   font-family: "Roboto", sans-serif;
-  font-size: 26px;
+  font-size: 4rem !important;
   line-height: 1;
   margin: unset !important;
   margin-bottom: 10px !important;
@@ -39,36 +39,37 @@ p {
   width: 100%;
   padding: 2rem 1.5rem;
   text-align: center;
-  background: #fff;
+  background-color: #181616 !important;
   border-radius: 7px;
-  border: 3px solid #eee;
+  border: 3px solid #f5ab1b;
   transition: all 0.2s ease;
   user-select: none;
+  color: white !important;
 }
 .uploader label:hover {
-  border-color: #f5ab1b;
+  background-color: white !important;
+  border-color: white;
   cursor: pointer;
+  color: #f5ab1b !important;
 }
-.uploader label.hover {
-  border: 3px solid #f5ab1b;
-  box-shadow: inset 0 0 0 6px #eee;
-}
-.uploader label.hover #start i.fa {
+
+/* .uploader label.hover #start i.fa {
   transform: scale(0.8);
   opacity: 0.3;
-}
+} */
 .uploader #start {
   float: left;
   clear: both;
   width: 100%;
 }
+
 .uploader #start.hidden {
   display: none;
 }
 .uploader #start i.fa {
   font-size: 50px;
   margin-bottom: 1rem;
-  transition: all 0.2s ease-in-out;
+  /* transition: all 0.2s ease-in-out; */
 }
 .uploader #response {
   float: left;
@@ -130,8 +131,9 @@ p {
 }
 .uploader div {
   margin: 0 0 0.5rem 0;
-  color: #f5ab1b;
+  /* color: #f5ab1b; */
 }
+
 .uploader .btn {
   display: inline-block;
   margin: 0.5rem 0.5rem 1rem 0.5rem;
