--- a/interface/templates/interface/index.html
+++ b/interface/templates/interface/index.html
@@ -3,45 +3,96 @@
 {%block title%} Basketball projection analysis AI {%endblock%} 
 {%block content%}
 
+<header>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img class='parallax-img' src="{% static 'interface/img/6.jpg' %}">
-  </div>
-</div>
-
-<div id="instruction" class="section">
-  <div class="row container">
-    <br />
-    <h2>HOW TO</h2>
-    <br /> <br /> <br /> <br /> 
-    <div class="preloader-wrapper big active">
-      <div class="spinner-layer">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
+    <div class="main-content">
+      <div class="logo-div">
+        <img  src="{% static 'interface/img/logo1.png' %}">
+      </div>
+      <div class="logo-name-div">
+        BASKETBALL <br/> PROJECTION<br/> ANALYSIS
       </div>
     </div>
-    <br /> <br /> <br /> <br />
-  </div>
+
+    <div class="logo-description-div">
+      Basketball projection analysis is an application <br/> that uses AI to analyze ball projections into the basket.
+    </div>
+
+    <div class="logo-text-div">
+      Click the button and check it out!
+    </div>
+
+    <div class="logo-icon">
+      <div class="icon-div1">
+        <a href="#" id="link1"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 490.4 490.4" style="enable-background:new 0 0 490.4 490.4;" xml:space="preserve">
+       <g>
+         <g>
+           <path d="M490.4,245.2C490.4,110,380.4,0,245.2,0S0,110,0,245.2s110,245.2,245.2,245.2S490.4,380.4,490.4,245.2z M24.5,245.2
+             c0-121.7,99-220.7,220.7-220.7s220.7,99,220.7,220.7s-99,220.7-220.7,220.7S24.5,366.9,24.5,245.2z"/>
+           <path d="M253.9,360.4l68.9-68.9c4.8-4.8,4.8-12.5,0-17.3s-12.5-4.8-17.3,0l-48,48V138.7c0-6.8-5.5-12.3-12.3-12.3
+             s-12.3,5.5-12.3,12.3v183.4l-48-48c-4.8-4.8-12.5-4.8-17.3,0s-4.8,12.5,0,17.3l68.9,68.9c2.4,2.4,5.5,3.6,8.7,3.6
+             S251.5,362.8,253.9,360.4z"/>
+         </g>
+       </g>
+       </svg>
+       </a>
+      </div>
+    </div>
+
+
+</header>
+
+<main>
+
+  <nav id="instruction" class="nav-main">
+    <a class="logo-nav" href="#"><img src="{% static 'interface/img/logo2.png' %}"></a>
+
+<div class="nav-menu">
+
+    <div class="nav-menu-item">
+      About
+    </div>
+
+    <div class="nav-menu-item">
+      How to
+    </div>
+    <div class="nav-menu-item">
+      Upload
+    </div>
+    <div class="nav-menu-item">
+      Analysis
+    </div>
+    <div class="nav-menu-item">
+      Authors
+    </div>
 </div>
 
-  <div class="parallax-container">
-    <div class="parallax">
-      <img src="{% static 'interface/img/rim1.jpg' %}">
+
+  </nav>
+
+  <div class="content-div">
+
+    <div class="section-text">
+      ABOUT
     </div>
+
+    <div class="section-div">
+
+    </div>
+
   </div>
 
-<div id="upload" class="section">
+
+</main>
+
+
+<!-- <div id="upload" class="section_one">
   <div class="row container" id="section-id">
     <br /> 
     <h2>UPLOAD</h2>
     <br />
-    <!-- Upload  -->
+    
     <form id="file-upload-form" class="uploader">
       <input id="file-upload" type="file" name="fileUpload" accept="image/*" />
 
@@ -52,7 +103,7 @@
             <i class="fa fa-download" aria-hidden="true"></i>
             <div>Select a file or drag here</div>
             <div id="notimage" class="hidden">Please select a video</div>
-            <!-- <span id="file-upload-btn" class="btn btn-primary">Select a file</span> -->
+            
           </div>
         </div>
         <div id="response" class="hidden">
@@ -65,17 +116,11 @@
     </form>
     <br /> <br /> <br />
     
-    <!-- <a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>ADD VIDEO</a> -->
   </div>
-</div>
+</div> -->
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img src="{% static 'interface/img/66.jpg' %}">
-  </div>
-</div>
-
-<div id="authors" class="section">
+<!-- 
+<div id="authors" class="section_two">
   <div class="row container" id="section-id">
     <br />
     <h2>AUTHORS</h2>
@@ -116,16 +161,14 @@
     <br /> <br /> 
   </div>
 
-</div>
-<div id="stopka">  Strona wykonana w celu ukazania możliwości przyszłego rozwoju programu | © 2020 ALL RIGHTS RESERVED</div>
-
-
+</div> -->
   <script>
+
     $(document).ready(function(){
-    $('.parallax').parallax();
-    });
+    $('.modal').modal();
+  });
 
   </script>
-  
+  <script src="{% static 'interface/js/jqscrollto.js' %}"></script>
 {%endblock%}
 
