--- a/interface/templates/interface/index.html
+++ b/interface/templates/interface/index.html
@@ -46,27 +46,30 @@
 <main>
 
   <nav  class="nav-main">
-    <a class="logo-nav" href="#" id='link6'><img src="{% static 'interface/img/logo2.png' %}"></a>
 
-<div class="nav-menu">
+  <div class="logo-nav">
+    <a href="#" id='link6'><img src="{% static 'interface/img/logo2.png' %}"></a>
+  </div>
+  
+  <div class="nav-menu">
 
-    <div href="#" id="link1" class="nav-menu-item">
-      About
-    </div>
+      <div href="#" id="link1" class="nav-menu-item">
+        About
+      </div>
 
-    <div href="#" id="link2" class="nav-menu-item">
-      How to
-    </div>
-    <div href="#" id="link3" class="nav-menu-item">
-      Upload
-    </div>
-    <div href="#" id="link4" class="nav-menu-item">
-      Analysis
-    </div>
-    <div href="#" id="link5" class="nav-menu-item">
-      Authors
-    </div>
-</div>
+      <div href="#" id="link2" class="nav-menu-item">
+        How to
+      </div>
+      <div href="#" id="link3" class="nav-menu-item">
+        Upload
+      </div>
+      <div href="#" id="link4" class="nav-menu-item">
+        Analysis
+      </div>
+      <div href="#" id="link5" class="nav-menu-item">
+        Authors
+      </div>
+  </div>
 
 
   </nav>
