Upload form and Analysis section

--- a/interface/templates/interface/index.html
+++ b/interface/templates/interface/index.html
@@ -136,7 +136,7 @@
     </div> 
 
 
-    <div id="analysis" class="section-div-2">
+    <div id="analysis" class="section-div-analysis">
 
       <div class="section-text">ANALYSIS</div>
 
