--- a/static/interface/css/style.css
+++ b/static/interface/css/style.css
@@ -181,6 +181,14 @@ main {
   background: #333533;
 }
 
+.section-div-analysis {
+  width: 100%;
+  height: 300vh;
+  /* Haight będzie obliczany względęm nagłówka */
+
+  background: #333533;
+}
+
 .upload-div {
   padding: 150px;
 }
