--- a/static/interface/css/style.css
+++ b/static/interface/css/style.css
@@ -183,7 +183,7 @@ main {
 
 .section-div-analysis {
   width: 100%;
-  height: 300vh;
+  height: 230vh;
   /* Haight będzie obliczany względęm nagłówka */
 
   background: #333533;
@@ -197,7 +197,68 @@ main {
   line-height: 79px;
   color: #ffffff;
   padding-top: 5%;
-  padding-bottom: 10%;
+  padding-bottom: 0%;
+}
+
+#section-text-analysis-content {
+}
+
+#video-content {
+  display: flex;
+  color: white !important;
+}
+
+#image-content {
+}
+
+#row {
+  clear: both;
+}
+
+#column {
+  float: left;
+}
+
+#row2 {
+  width: 44%;
+  padding-top: 10%;
+  padding-left: 8%;
+}
+
+#column2 {
+  display: table-cell;
+  padding: 2%;
+  color: white !important;
+  font-size: 16px !important;
+}
+
+#imgsize {
+  height: 420px !important;
+  width: auto !important;
+}
+
+.video-js .vjs-big-play-button {
+  top: 40% !important;
+  left: 40% !important;
+  background-color: #fca311 !important;
+}
+
+/* .video-js:hover button {
+  background-color: #fca311 !important;
+}
+
+.vjs:hover {
+  background-color: rgba(43, 51, 63, 0.7);
+} */
+
+.video-js {
+  width: 466px !important;
+  height: 262px !important;
+}
+
+.my-video-dimensions {
+  width: 466px !important;
+  height: 262px !important;
 }
 
 .upload-div {
